...
    tools:context="com.sparkleusc.sparklesparkhere.LenderAddAvailability">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Listings"
        android:id="@+id/AvailabilitiesTV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <ListView
...
